--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,11 @@
-name: Deploy to Railway
+name: (disabled) Railway Deploy
+on:
+  workflow_dispatch: {}   # يدوي فقط
+jobs:
+  noop:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Disabled – we use Render."
 
 on:
   push:
