--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-TELEGRAM_BOT_TOKEN=8217632244:AAH30Ytf-7koU93ni32WoNAKiy3h08lQXw0
-WEBHOOK_URL=https://laughing-orbit-697r4vrp9ppwcrrx5-3694.app.github.dev
-PORT=3694
-GITHUB_OWNER=hamad44321-eng
+TELEGRAM_BOT_TOKEN=توكن_البوت
+API_ID=الـAPI_ID_من_MyTelegramOrg
+API_HASH=الـAPI_HASH_من_MyTelegramOrg
+ADMIN_IDS=567809992
+SEARCH_LIMIT=20
+SEARCH_WORDS=نودز,جميلة,صغيرة,حصري,حصريات,خليجي,خليجية,سعودية,سعوديات,فخم,مكوه,تعرض,عرض
+PORT=10000
